--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e js,hbs"
+    "devDependencies": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
